@@ -1,5 +1,11 @@
 2008-06-19  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
+	Try to subscribe to any uri passed on the command line that contains rss,
+	xml, feed, or starts with itpc.
+
+2008-06-19  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Extensions/Banshee.Lastfm/Makefile.am: MD sorting.
 
 	* src/Clients/Nereid/Nereid/ViewContainer.cs: Change the main vbox spacing
